fixed spacing issues with for small mobile devices

--- a/style.css
+++ b/style.css
@@ -75,6 +75,14 @@ body{
   
 }
 
+.article-position{
+  display: flex;
+  flex-direction: column;
+}
+.article-item span{
+  margin-top:  auto;
+}
+
 #news{
   max-width: 90%;
   margin: 2% auto;
@@ -278,25 +286,56 @@ footer {
   .future-bg {
     display: none
   };
+  
+  #mobile-future-container{
+    justify-content: flex-start;
+  }
+  
+  #future-text-wrapper {
+    width: 100%;
+  }
+
+  .future {
+    width: 100%;
+    background: #222;
+    color: #fff;
+    margin-top: 2%;
+  }
+
   .future-text {
-    display: block;
-    max-width: 100%;
-    margin: 0 auto;
+    flex-basis: 100%;
+    flex-wrap: wrap;
   }
   .future-text h3, .future-text p{
-    text-align: center;
-  }
+    font-size: 16px;
+    display: inline-block;
+    margin-top: 2rem;
+}
+.future-text p{
+ width: 100%;
+}
   .article-container{
-    justify-content: center;
+    
+    background: #222;
+    padding-bottom: 2rem;
     
   }
+  .future-item {
+    flex: 0 0 50%;
+  }
+  
   .future-item a, .future-item span{
-    color: #222;
+    color: #fff;
+    font-size: 16px;
+    
+    
   }
   .future-item span {
     margin-bottom: 1rem;
-    color: #999;
+    font-size: 12px;
   }
+
+ 
 
   .newsletter-img{
     border-radius: 12px 12px 0 0;
@@ -316,11 +355,56 @@ footer {
 }
 
 @media screen and (max-width: 576px){
+  #news-heading{
+    margin-top: 3rem;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+  }
   .socials {
     margin: 2rem 0;
-    padding-left: 1rem;
+    margin-left: 0
     
   }
+  .future-text {
+    padding-left: 1.2rem;
+  }
+  .future-text h3{
+    font-size: 18px;
+    margin-bottom: 0;
+    
+  }
+  .cat-heading h2{
+    font-size: 18px;
+    padding-top: 1rem;
+    font-weight: bold;
+  }
+  .categories {
+    margin: 2% 0 2% 0;
+
+  }
+  .cat-stories{
+    margin: 2rem 0 0 0;
+    width: 100%;
+  
+  }
+  .future-text p{
+    font-size: 12px;
+    margin-top: 2%
+  }
+  .future-item a {
+    font-size: 12px;
+  }
+  .future-item span{
+    font-size: 10px;
+  }
+  .future-item {
+    flex: 0 0 75%;
+  }
+  
+  .socials{
+    padding-left: 0;
+  }
+  
   .socials h4{
     font-size: 26px;
     font-weight: bold;
@@ -331,11 +415,55 @@ footer {
   .social-icons i{
     font-size: 20px;
   }
+  .newsletter {
+    max-width: 100%;
+    margin-top: 1rem;
+  }
   .newsletter-text {
     padding-left: 3rem;
+  }
+  .newsletter img{
+    border-radius: 0;
+  }
+  .newsletter-bg{
+    border-radius: 0;
   }
   #newsletter-btn{
     font-size: 18px;
     max-width: 100%;
   }
-} 
+   .footer-heading{
+    padding-top: 1rem;
+    margin-top: 0;
+  }
+  
+  .footer-col{
+    margin-top: 0;
+    padding-left: 0;
+    border-bottom: .5px solid #ddd;
+  }
+ 
+  #footer-mobile{
+    flex-direction: column;
+    justify-content: flex-start;
+    
+  }
+  #footer-mobile a{
+    padding-bottom: 0.5rem;
+  }
+  .footer-social{
+    margin-bottom: 3rem;
+}
+#social-mobile {
+  margin-left: 0 !important;
+  padding-top: 1rem;
+  
+}
+.footer-info{
+  padding-left:0;
+  padding-right: 0;
+}
+#copyright{
+  margin-bottom: 1rem;
+}
+}
